--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/vue-color": "^2.4.2",
     "core-js": "^2.6.5",
     "skyway-js": "^1.2.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
+    "vue-color": "^2.7.0",
     "vue-property-decorator": "^8.1.0"
   },
   "devDependencies": {
